--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.0",
+    "sweetalert2": "^11.21.0",
     "tailwindcss": "^4.1.3"
   },
   "devDependencies": {
